# ChangeLog for dev-perl/IO-Socket-INET6
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Socket-INET6/ChangeLog,v 1.8 2006/02/26 04:12:17 kumba Exp $

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org> IO-Socket-INET6-2.51.ebuild:
  Added ~mips to KEYWORDS.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org>
  IO-Socket-INET6-2.51.ebuild:
  Mark 2.51 stable on alpha

  28 Jan 2006; Markus Rothe <corsair@gentoo.org>
  IO-Socket-INET6-2.51.ebuild:
  Added ~ppc64

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  IO-Socket-INET6-2.51.ebuild:
  Added to ~hppa, ~ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  IO-Socket-INET6-2.51.ebuild:
  Marking sparc x86 stable

  02 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org>
  IO-Socket-INET6-2.51.ebuild:
  marked ~alpha wrt bug #112508

  01 Dec 2005; Luis Medinas <metalgod@gentoo.org>
  IO-Socket-INET6-2.51.ebuild:
  Added ~amd64 keyword. bug #112508.

*IO-Socket-INET6-2.51 (21 Nov 2005)

  21 Nov 2005; <mcumming@gentoo.org> +metadata.xml,
  +IO-Socket-INET6-2.51.ebuild:
  Optional dep for spamassassin
