@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-DNS/Attic/Net-DNS-0.53-r1.ebuild,v 1.10 2006/03/14 15:43:02 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-DNS/Attic/Net-DNS-0.53-r1.ebuild,v 1.11 2006/03/19 11:32:50 corsair Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://cpan/authors/id/O/OL/OLAF/${P}.tar.gz"
 
 LICENSE="Artistic"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc64 ~s390 ~sh sparc x86"
+KEYWORDS="alpha ~amd64 ~arm hppa ~ia64 ~mips ppc64 ~s390 ~sh sparc x86"
 IUSE="ipv6"
 
 DEPEND="virtual/perl-Digest-MD5
