@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-DNS
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.77 2006/03/14 15:43:02 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.78 2006/03/19 11:32:50 corsair Exp $
+
+  19 Mar 2006; Markus Rothe <corsair@gentoo.org> Net-DNS-0.53-r1.ebuild:
+  Stable on ppc64
 
   14 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   Net-DNS-0.53-r1.ebuild:
