@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Socket6
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Socket6/ChangeLog,v 1.17 2006/02/26 04:11:02 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Socket6/ChangeLog,v 1.18 2006/03/19 11:29:53 corsair Exp $
+
+  19 Mar 2006; Markus Rothe <corsair@gentoo.org> Socket6-0.19.ebuild:
+  Stable on ppc64
 
   26 Feb 2006; Joshua Kinard <kumba@gentoo.org> Socket6-0.19.ebuild:
   Added ~mips to KEYWORDS.
