@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/IO-Socket-INET6
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Socket-INET6/ChangeLog,v 1.8 2006/02/26 04:12:17 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/IO-Socket-INET6/ChangeLog,v 1.9 2006/03/19 11:35:58 corsair Exp $
+
+  19 Mar 2006; Markus Rothe <corsair@gentoo.org>
+  IO-Socket-INET6-2.51.ebuild:
+  Stable on ppc64
 
   26 Feb 2006; Joshua Kinard <kumba@gentoo.org> IO-Socket-INET6-2.51.ebuild:
   Added ~mips to KEYWORDS.
